Fix style height 100vh bug
- Add event listener to update height on resize to prevent 100vh bug on mobile screens where the browser UI covers the bottom part of the page

--- a/src/App.scss
+++ b/src/App.scss
@@ -120,7 +120,8 @@ body {
 // App content 
 .app_container {
     background-color: var(--main-bg-color);
-    height: 100vh;
+    //height: 100vh;
+    max-height: 100vh;
     padding-bottom: 6.5%;
     position: relative;
     transition: all .2s ease-in-out;
